[project]
name = "stockmarketnetworkanalysis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.22.9",
    "better-aws>=0.7.0",
    "pandas>=3.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
